<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:padding="5dp">

        <TextView
            android:id="@+id/selected_element"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ingredient"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/remove_ingredient"
            style="@style/Widget.AppCompat.Button.Small"
            android:text="@string/remove"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:focusable="false"
            android:textAppearance="?android:attr/textAppearanceSmall"
            />

</RelativeLayout>